# sl-map-tools

./: .gitattributes  .gitignore  Cargo.toml  README.md  _typos.toml  deny.toml  map.sh  maps.sh  release.sh
.github/workflows/: github-release-web.yaml  github-release.yaml
sl-chat-log-parser/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
sl-chat-log-parser/src/: avatar_messages.rs  lib.rs  system_messages.rs  utils.rs
sl-glw/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
sl-glw/examples/: render_sample.rs
sl-glw/src/: cache.rs  client.rs  error.rs  geometry.rs  lib.rs  parse.rs  render.rs  style.rs  text.rs  types.rs
sl-glw/tests/: fetch_with_wiremock.rs  render_smoke.rs
sl-map-apis/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
sl-map-apis/src/: coverage.rs  lib.rs  map_tiles.rs  region.rs  text.rs
sl-map-apis/tests/fixtures/: tscc-2026-03-30.txt
sl-map-cli/: CHANGELOG.md  Cargo.toml  README.md  changelog  cliff-debian.toml  cliff.toml  clippy.toml  push-deploy-branches.sh
sl-map-cli/rpm/centos6/: sl-map-cli.spec
sl-map-web/: CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  changelog  cliff-debian.toml  cliff.toml
sl-map-web/contrib/: sl-map-web-backup.service  sl-map-web-backup.timer  sl-map-web.service
sl-map-web/lsl/: registration.lsl
sl-map-web/migrations/: 0001_init.sql  0002_groups_and_library.sql  0003_unique_legacy_name.sql  0004_rate_buckets.sql  0005_notecard_scope_match.sql  0006_render_grid_rectangle.sql  0007_notecard_grid_rectangle.sql  0008_user_audit_set_null.sql  0009_user_route_color.sql  0010_saved_glw_data.sql  0011_saved_logos.sql  0012_saved_custom_colors.sql  0013_themes.sql
sl-map-web/src/: auth.rs  client_ip.rs  config.rs  csrf.rs  db.rs  error.rs  fonts.rs  groups.rs  jobs.rs  lib.rs  library.rs  rate_limit.rs  routes.rs  state.rs  storage.rs  usb_notecard.rs
sl-map-web/src/assets/: app.js  groups.html  groups.js  index.html  invitations.html  invitations.js  library.html  library.js  login.html  login.js  modal.js  profile.html  profile.js  set_password.html  set_password.js  style.css
sl-map-web/src/routes/: auth.rs  events.rs  fonts.rs  glw.rs  groups.rs  index.rs  invitations.rs  library_pages.rs  logos.rs  notecard.rs  notecards.rs  pages.rs  region.rs  render.rs  renders.rs  result.rs  text.rs  themes.rs  users.rs
sl-map-web/tests/: delete_session.rs  notecard_render_scope_match.rs  recover_orphaned_renders.rs  saved_colors.rs  saved_logos.rs  themes.rs
sl-types/: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
sl-types/src/: attachment.rs  chat.rs  environment.rs  experience.rs  friend.rs  key.rs  lib.rs  lsl.rs  map.rs  money.rs  parcel.rs  pathfinding.rs  radar.rs  search.rs  serde_helpers.rs  utils.rs  viewer_uri.rs
