[package]
name = "sl-chat-log-parser"
description = "Parser for SL viewer chat logs (Firestorm in particular but might work for others too)"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
publish = false

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
bytesize = "2.0.1"
chumsky = "0.9.3"
sl-types = { version = "0.1.5", path = "../sl-types", features = ["chumsky"] }
time = { version = "0.3.37", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
dirs2 = "3.0.1"
dotenvy = "0.15.7"
envy = "0.4.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = { version = "4.6.0", default-features = false }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-test = "0.2.5"

[lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
unsafe_code = "forbid"
deprecated = "deny"
private_interfaces = "forbid"
private_bounds = "forbid"
non_fmt_panics = "forbid"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_doc_comments = "forbid"
unused_must_use = "forbid"
while_true = "deny"
unused_parens = "deny"
redundant_semicolons = "deny"
non_ascii_idents = "deny"
confusable_idents = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
mod_module_files = "deny"
#pedantic = "warn"
redundant_else = "warn"
must_use_candidate = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
incompatible_msrv = "deny"

[lints.rustdoc]
missing_crate_level_docs = "warn"
broken_intra_doc_links = "deny"
