[package]
name = "sl-map-apis"
description = "Wraps the SL map API to convert grid coordinates to region names and vice versa and to fetch map tiles"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
publish = false

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
http-cache-semantics = { version = "2.1.0", features = ["reqwest"] }
image = { version = "0.25.2", default-features = false, features = ["jpeg", "png", "rayon"] }
redb = "2.1.3"
reqwest = "0.12.7"
serde_json = "1.0.128"
sl-types = { path = "../sl-types" }
thiserror = "1.0.63"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["full", "test-util"] }

[lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
unsafe_code = "forbid"
deprecated = "deny"
private_interfaces = "forbid"
private_bounds = "forbid"
non_fmt_panics = "forbid"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_doc_comments = "forbid"
unused_must_use = "forbid"
while_true = "deny"
unused_parens = "deny"
redundant_semicolons = "deny"
non_ascii_idents = "deny"
confusable_idents = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
mod_module_files = "deny"
#pedantic = "warn"
redundant_else = "warn"
must_use_candidate = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
incompatible_msrv = "deny"

[lints.rustdoc]
missing_crate_level_docs = "warn"
broken_intra_doc_links = "deny"
