[package]
name = "sl-map-cli"
description = "Makes the SL map functionality available on the CLI"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/sl-map-tools"
keywords = ["secondlife", "map", "route", "usb_notecard"]
categories = ["command-line-utilities"]

exclude = ["push-deploy-branches.sh", ".env", "tarpaulin-report.html", "tarpaulin-report.json"]

[dependencies]
clap = { version = "4.5.3", features = ["derive", "cargo"] }
hex_color = "3.0.0"
image = "0.25.2"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
ratelimit = "0.9.1"
sl-map-apis = "0.1.0"
sl-types = "0.1.0"
thiserror = { version = "1.0.58" }
tokio = { version = "1.36.0", features = [ "full" ] }
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.18", features = [ "env-filter", "tracing-log" ] }

[package.metadata.deb]
name = "sl-map-cli"
depends = "$auto"
extended-description = "Makes the SL map functionality available on the CLI"
section = "database"
copyright = "2024, Matthias Hörmann <mhoermann@gmail.com>"
assets = [
  [ "target/release/sl_map_cli", "usr/bin/", "755" ],
  ]
maintainer-scripts = "maintainer-scripts"
changelog = "changelog"
revision = "1"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
sl_map_cli = { path = "/usr/bin/sl_map_cli" }

[lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
unsafe_code = "forbid"
deprecated = "deny"
private_interfaces = "forbid"
private_bounds = "forbid"
non_fmt_panics = "forbid"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_doc_comments = "forbid"
unused_must_use = "forbid"
while_true = "deny"
unused_parens = "deny"
redundant_semicolons = "deny"
non_ascii_idents = "deny"
confusable_idents = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
mod_module_files = "deny"
#pedantic = "warn"
redundant_else = "warn"
must_use_candidate = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
incompatible_msrv = "deny"

[lints.rustdoc]
missing_crate_level_docs = "warn"
broken_intra_doc_links = "deny"
