[package]
name = "sl-types"
description = "Some basic types for Second Life related tools"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.1.8"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/sl-map-tools"
keywords = ["secondlife", "map", "route", "usb_notecard"]
categories = ["science::geo", "parser-implementations"]

exclude = [".env", "tarpaulin-report.html", "tarpaulin-report.json"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
chumsky = ["dep:chumsky"]

[dependencies]
chumsky = { version = "0.9.3", optional = true }
nutype = { version = "0.6.2", features = ["serde"] }
percent-encoding = "2.3.2"
ranges = "0.4.0"
serde = { version = "1.0.226", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
uuid = "1.18.1"

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
unsafe_code = "forbid"
deprecated = "deny"
private_interfaces = "forbid"
private_bounds = "forbid"
non_fmt_panics = "forbid"
unreachable_code = "deny"
unreachable_patterns = "deny"
unused_doc_comments = "forbid"
unused_must_use = "forbid"
while_true = "deny"
unused_parens = "deny"
redundant_semicolons = "deny"
non_ascii_idents = "deny"
confusable_idents = "deny"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
cargo_common_metadata = "warn"
mod_module_files = "deny"
#pedantic = "warn"
redundant_else = "warn"
must_use_candidate = "warn"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
incompatible_msrv = "deny"

[lints.rustdoc]
missing_crate_level_docs = "warn"
broken_intra_doc_links = "deny"
